<resources>
    <string name="app_name">IBS FoodAnalyzer</string>
    <string name="meal_icon_label">Meal</string>
    <string name="other_icon_label">Other</string>
    <string name="exercise_icon_label">Exercise</string>
    <string name="bm_icon_label">BM</string>
    <string name="score_icon_label">Score</string>
    <string name="template_icon_label">Template</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_diary">Diary</string>
    <string name="delete_event">Delete Event</string>

    <!-- strings for aFileChooser -->
    <string name="chooser_title">Import file</string>
    <string name="title_activity_drawer">IBS FoodAnalyzer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="avg_info">Gives an average score of a tag (for example "Milk" or "Running") based <b>on</b> how it influences Rating, Bm Completeness or Bm Bristol.\n\n<b>Delta</b>\n Compares the average Rating to the score that was just before Hours to Wait (change this number in Delta settings) A positive Delta means the Rating score has increased since just before Hours to Wait. The reason Delta was implemented was because some tags in Average Score are going to have some scores that seems unlikely (perhaps you ate a healthy vegetable at a time when you felt awful, then that vegetable will have lower score than otherwise). If the Delta score is very high or very low it might be an inclination to take a very strange result in Average Score with a grain of salt.</string>
    <string name="freq_info">UPCOMING FEATURE. Shows a percentage for event types that describes how often they have been within a certain score (Rating, Bm Completeness or Bm Bristol) interval</string>
    <string name="time_info">Shows the time periods that the diary has been within a certain score (Rating, Bm Completeness or Bm Bristol) interval. This is a very useful tool to fast investigate your best or worst days, and figure out on your own why it was so.</string>
    <string name="portions_info">Portion Statistics returns average score of different meal sizes (meal portionSize) based on their relationships to Rating, Bm Completeness or Bm Bristol. The meal sizes to investigate are added manually by user in Portion Stat Settings. You can for example add a size interval of 0.0 - 1.5 and another: 1.5 - 3.0 to see if you in generally feel better after eating small meals than after large meals.</string>

    <string name="avg_info_score">SCORE\tNAME\n
        6.0\tPhenomenal\n
        5.0\tGreat\n
        4.0\tOk\n
        3.0\tDeficient\n
        2.0\tBad\n
        1.0\tAwful
    </string>
    <string name="complete_info_score">SCORE\tNAME\n
        5.0\tPhenomenal\n
        4.0\tGood\n
        3.0\tDeficient\n
        2.0\tBad\n
        1.0\tAbysmal
    </string>
    <string name="bristol_info_score">SCALE\tDESCRIPTION\n
        7.0\tLiquid\n
        6.0\tMushy with ragged edges\n
        5.0\tSoft blobs with clear edges\n
        4.0\tSmooth sausaget\n
        3.0\tSausage with cracked surface\n
        2.0\tLumpy Sausage\n
        1.0\tSeperate hard lumps
    </string>

    <!--Stat Settings variables-->
    <string name="inactive_hours_over_this_leads_to_break">If no events have been added after this amount of hours, there will be an automatic break. This makes the statistics algorithms more accurate, since they then don\'t extrapolate the Ratings too long in the future. In general try to nor have a smaller Hours-After-Break than your largest time difference between meals (including sleep, so at least 8 hours, probably more).</string>

    <string name="avg_rating_pref_wait_key">avg_rating_stat_wait_hours_after_event</string>
    <string name="avg_rating_pref_stop_key">avg_rating_stat_stop_hours_after_event</string>
    <string name="avg_rating_pref_quant_key">avg_rating_quantity_min_limit</string>

    <string name="portions_ranges_key">portionRanges</string>
    <string name="portions_rating_pref_wait_hours_key">portions_rating_stat_wait_hours_after_meal</string>
    <string name="portions_rating_pref_valid_hours_key">portions_rating_stat_stop_hours_after_meal</string>
    <string name="portions_pref_min_hours_between_meals">portions_min_distance_between_meals</string>

    <string name="time_rating_start">time_rating_start</string>
    <string name="time_rating_end">time_rating_end</string>
    <string name="time_rating_duration_key">time_rating_duration_key</string>

    <string name="time_complete_start">time_complete_start</string>
    <string name="time_complete_end">time_complete_end</string>
    <string name="time_complete_duration_key">time_complete_duration_key</string>

    <string name="time_bristol_start">time_bristol_start</string>
    <string name="time_bristol_end">time_bristol_end</string>
    <string name="time_bristol_duration_key">time_bristol_duration_key</string>

    <string name="hours_before_bm_furthest_distance_limit">avg_bm_stat_start_hours_before_bm</string>
    <string name="hours_before_bm_closest_distance_limit">avg_rating_stop_hours_before_bm</string>
    <string name="avg_bm_pref_quant_key">bm_rating_quantity_min_limit</string>
    <string name="about_external_libraries">This app is using the following external libraries:</string>
    <string name="apache_license">The above mentioned libraries are licensed under the Apache License, Version 2.0 (the "License") you may not use these libraries except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0</string>
    <string name="no_parent_of_tag_type_added">no parent added</string>
    <string name="add_new_tagtype_name_info">Write the name of the TagType. For example \"Butter\" or \"Running\".</string>
    <string name="add_new_tagtype_parent_info">Add a parent to this Tag Type. For example: The Tag Type \'Cheese\' might have the parent \'Lacteo Product\'. This option is not necessary.</string>
    <string name="type_of_exercise">Type of Exercise</string>

</resources>
