<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sample="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="Settings for Time Rating Statistics">
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="5"
            android:enabled="true"
            android:key="@string/time_rating_start"
            android:summary="The lowest score the time period is allowed to have."
            android:title="Rating start"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="6"
            sample:msbp_measurementUnit="points"
            sample:msbp_minValue="1"
            />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="7"
            android:enabled="true"
            android:key="@string/time_rating_end"
            android:summary="The highest score the time period is allowed to have."
            android:title="Rating end"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="6"
            sample:msbp_measurementUnit="points"
            sample:msbp_minValue="1"
            />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:enabled="true"
            android:key="@string/time_rating_duration_key"
            android:summary="The minimum time in hours the period should last."
            android:title="Min duration"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="72"
            sample:msbp_measurementUnit="h"
            sample:msbp_minValue="0"
            />
        <Preference
            android:key="pref_static_field_key"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/avg_info_score"
            android:title="Score Reference"/>
    </PreferenceCategory>
</PreferenceScreen>