<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sample="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="Settings for Time Bristol Statistics">
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="3"
            android:enabled="true"
            android:key="@string/time_bristol_start"
            android:summary="The lowest bristol score the time period is allowed to have."
            android:title="Bristol Scale Start"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="7"
            sample:msbp_measurementUnit="points"
            sample:msbp_minValue="1"
            />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="5"
            android:enabled="true"
            android:key="@string/time_bristol_end"
            android:summary="The highest bristol score the time period is allowed to have."
            android:title="Bristol Scale End"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="7"
            sample:msbp_measurementUnit="points"
            sample:msbp_minValue="1"
            />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:enabled="true"
            android:key="@string/time_bristol_duration_key"
            android:summary="The minimum time in hours the period should last."
            android:title="Min duration"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="72"
            sample:msbp_measurementUnit="h"
            sample:msbp_minValue="1"
            />
        <Preference
            android:key="pref_static_field_key"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/bristol_info_score"
            android:title="Score Reference"/>
    </PreferenceCategory>
</PreferenceScreen>