<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sample="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="Settings for Time Completeness Statistics">
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="4"
            android:enabled="true"
            android:key="@string/time_complete_start"
            android:summary="The lowest completeness score the time period is allowed to have."
            android:title="Completeness Score Start"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="5"
            sample:msbp_measurementUnit="points"
            sample:msbp_minValue="1"
            />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="5"
            android:enabled="true"
            android:key="@string/time_complete_end"
            android:summary="The highest completeness score the time period is allowed to have."
            android:title="Completeness Score End"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="5"
            sample:msbp_measurementUnit="points"
            sample:msbp_minValue="1"
            />
        <Preference
            android:key="pref_static_field_key"
            android:persistent="false"
            android:selectable="false"
            android:summary="@string/complete_info_score"
            android:title="Score Reference"/>
    </PreferenceCategory>
</PreferenceScreen>