<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:sample="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="Settings for Rating Avg Statistics">
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:enabled="true"
            android:key="@string/avg_rating_pref_wait_key"
            android:summary="A wait hour of zero (0) means that a tag type is calculated on as if it is affecting the rating immediately after the tag occurred."
            android:title="Hours to wait"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="48"
            sample:msbp_measurementUnit="h"
            sample:msbp_minValue="0"
            />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="24"
            android:enabled="true"
            android:key="@string/avg_rating_pref_stop_key"
            android:summary="A stop hour of 24h means that a tag type is calculated on as if it stops affecting the rating 24 hours after the tag occurred."
            android:title="Hours before stop"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="72"
            sample:msbp_measurementUnit="h"
            sample:msbp_minValue="0"
            />
        <com.pavelsikun.seekbarpreference.SeekBarPreference
            android:defaultValue="0"
            android:enabled="true"
            android:key="@string/avg_rating_pref_quant_key"
            android:summary="The tag should occur at minimum this amount to be shown in statistics."
            android:title="Minimum quantity limit"
            sample:msbp_dialogEnabled="false"
            sample:msbp_interval="1"
            sample:msbp_maxValue="20"
            sample:msbp_measurementUnit="min quantity"
            sample:msbp_minValue="0"
            />
    </PreferenceCategory>
</PreferenceScreen>